--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       <div class="grid-2">
         <div>
           <p><strong data-i18n="dateLabel">📅 Date:</strong> <span data-i18n="dateValue">17 January 2026</span></p>
-          <p><strong data-i18n="timeLabel">🕒 Time:</strong> <span data-i18n="timeValue">19:30</span></p>
+          <p><strong data-i18n="timeLabel">🕒 Time:</strong> <span data-i18n="timeValue">17:00</span></p>
           <p><strong data-i18n="placeLabel">📍 Location:</strong> <span data-i18n="placeValue"></span></p>
         </div>
 
         <div>
           <p><strong data-i18n="dressLabel">👕 Dress code:</strong> <span data-i18n="dressValue">Casual</span></p>
           <p><strong data-i18n="foodLabel">🍕 Food & drinks:</strong> <span data-i18n="foodValue"></span></p>
-          <p><strong data-i18n="rsvpLabel">✅ RSVP:</strong> <span data-i18n="rsvpValue">Let me know by <strong>10/01</strong> 😊</span></p>
+          <p><strong data-i18n="rsvpLabel">✅ RSVP:</strong> <span data-i18n="rsvpValue">Let me know <strong>ASAP</strong> 😊</span></p>
         </div>
       </div>
 
@@ -106,25 +106,26 @@
         dateLabel: "📅 Date:",
         dateValue: "17 January 2026",
         timeLabel: "🕒 Time:",
-        timeValue: "19:30",
+        timeValue: "17:00",
         placeLabel: "📍 Location:",
-        placeValue: 'Kalabase — Karaoke (<a href="https://maps.app.goo.gl/VEoURHQ5YNMqFppe7" target="_blank" rel="noopener">Google Maps</a>)',
+        placeValue: 'My house',
+    
 
         dressLabel: "👕 Dress code:",
         dressValue: "Casual",
         foodLabel: "🍕 Food & drinks:",
-        foodValue: 'Snacks and drinks (<a href="https://drive.google.com/file/d/1xbIwStQix7-cQG_ZFFER-6jGUQ-YNUA1/view" target="_blank" rel="noopener">details</a>)',
+        foodValue: 'Some Brazilian food',
         rsvpLabel: "✅ RSVP:",
-        rsvpValue: "Let me know by <strong>10/01</strong> 😊",
+        rsvpValue: "Let me know <strong>ASAP</strong> 😊",
 
         descLabel: "Description:",
-        descText: "Music, chats, food, a relaxed celebration. Show me your karaoke skills.",
+        descText: "Music, chats, food, a relaxed celebration.",
 
         photosHeading: "Photos",
-        photosHint: "Tip: put 3 photos in <code>img/</code> with the names above.",
+        photosHint: "Just me enjoying life!",
 
         giftsHeading: "Gifts",
-        giftsText: "If you’d like to contribute to a gift, you can use one of the options below. Thank you! 💛",
+        giftsText: "If you’d like to give me a gift, you can use one of the options below. Thank you! 💛",
         revolutHint: 'Scan with the Revolut app.<br><a href="https://revolut.me/rricardosilva" target="_blank" rel="noopener">revolut.me/rricardosilva</a>',
         btcHint: "Scan with your wallet.",
         qrHint: 'You can also buy using my Amazon Wishlist.<br><a href="https://www.amazon.ie/hz/wishlist/ls/1IKBLHHTMYEOG?ref_=wl_share" target="_blank" rel="noopener">Open wishlist</a>.',
@@ -141,25 +142,25 @@
         dateLabel: "📅 Data:",
         dateValue: "17 de janeiro de 2026",
         timeLabel: "🕒 Horário:",
-        timeValue: "19:30",
+        timeValue: "17:00",
         placeLabel: "📍 Local:",
-        placeValue: 'Kalabase — Karaokê (<a href="https://maps.app.goo.gl/VEoURHQ5YNMqFppe7" target="_blank" rel="noopener">Google Maps</a>)',
+        placeValue: 'Minha casa',
 
         dressLabel: "👕 Dress code:",
         dressValue: "Casual",
         foodLabel: "🍕 Comida e bebida:",
-        foodValue: 'Snacks e bebidas (<a href="https://drive.google.com/file/d/1xbIwStQix7-cQG_ZFFER-6jGUQ-YNUA1/view" target="_blank" rel="noopener">detalhes</a>)',
+        foodValue: 'Comida Brasileira',
         rsvpLabel: "✅ RSVP:",
-        rsvpValue: "Me avisa até <strong>10/01</strong> 😊",
+        rsvpValue: "Me avisa <strong>o quanto antes!</strong> 😊",
 
         descLabel: "Descrição:",
-        descText: "Música, conversa, comida e comemoração tranquila. Quero ver suas habilidades no karaokê.",
+        descText: "Música, conversa, comida e comemoração tranquila.",
 
         photosHeading: "Fotos",
-        photosHint: "Dica: coloque 3 fotos em <code>img/</code> com os nomes acima.",
+        photosHint: "Eu curtindo a vida!",
 
         giftsHeading: "Presentes",
-        giftsText: "Se você quiser contribuir com um presente, pode usar uma das opções abaixo. Obrigado! 💛",
+        giftsText: "Se você quiser me presentear, pode usar uma das opções abaixo. Obrigado! 💛",
         revolutHint: 'Escaneie com o app Revolut.<br><a href="https://revolut.me/rricardosilva" target="_blank" rel="noopener">revolut.me/rricardosilva</a>',
         btcHint: "Escaneie com sua carteira.",
         qrHint: 'Você também pode comprar pela minha lista da Amazon.<br><a href="https://www.amazon.ie/hz/wishlist/ls/1IKBLHHTMYEOG?ref_=wl_share" target="_blank" rel="noopener">Abrir lista</a>.',
