--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         giftsText: "If you’d like to give me a gift, you can use one of the options below. Thank you! 💛",
         revolutHint: 'Scan with the Revolut app.<br><a href="https://revolut.me/rricardosilva" target="_blank" rel="noopener">revolut.me/rricardosilva</a>',
         btcHint: "Scan with your wallet.",
-        qrHint: 'You can also buy using my Amazon Wishlist.<br><a href="https://www.amazon.ie/hz/wishlist/ls/1IKBLHHTMYEOG?ref_=wl_share" target="_blank" rel="noopener">Open wishlist</a>.',
+        qrHint: 'You can also buy something from my very humble (and totally reasonable) Amazon wishlist.<br><a href="https://www.amazon.ie/hz/wishlist/ls/1IKBLHHTMYEOG?ref_=wl_share" target="_blank" rel="noopener">Open wishlist</a>.',
         footer: "See you there! 🎉"
       },
 
@@ -163,7 +163,7 @@
         giftsText: "Se você quiser me presentear, pode usar uma das opções abaixo. Obrigado! 💛",
         revolutHint: 'Escaneie com o app Revolut.<br><a href="https://revolut.me/rricardosilva" target="_blank" rel="noopener">revolut.me/rricardosilva</a>',
         btcHint: "Escaneie com sua carteira.",
-        qrHint: 'Você também pode comprar pela minha lista da Amazon.<br><a href="https://www.amazon.ie/hz/wishlist/ls/1IKBLHHTMYEOG?ref_=wl_share" target="_blank" rel="noopener">Abrir lista</a>.',
+        qrHint: 'Você também pode comprar algo da minha humilde (e totalmente razoável) lista da Amazon.<br><a href="https://www.amazon.ie/hz/wishlist/ls/1IKBLHHTMYEOG?ref_=wl_share" target="_blank" rel="noopener">Abrir lista</a>.',
         footer: "Te espero! 🎉"
       }
     };
